# replit-fastapi-minimal

./: .gitignore  .replit  main.py  pyproject.toml  requirements-complied.txt
app/: dependencies.py
app/apis/: users.py
app/tests/: test_users.py
