[tool.poetry]
name = "replit-fastapi-minimal"
version = "0.1.0"
description = ""
authors = ["Jerin Peter George <jerinpetergeorge@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
black = "^22.3.0"
isort = "^5.10.1"
requests = "^2.27.1"
pytest = ">=6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "app/tests"
]